Timeline with workout entry breaks in very small screen - FIXED

--- a/css/moveit.scss
+++ b/css/moveit.scss
@@ -97,6 +97,7 @@ body {
         .collection-item{
             width: 92%;
             margin: 5px 4% 10px 4%;
+            padding: 10px;
             box-shadow: 0px 0px 1px rgb(200, 200, 200);
             border-bottom: 1px solid #e0e0e0 !important;
             &.notification-read{
